@@ -1,16 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 fd2c5b0bcf7ab24000c4b1891d39db6e ChangeLog 925
+MD5 c8b09c76221c3867f52e814173ad679a ChangeLog 1102
 MD5 4de1063eb292e8948a41b7770e71b369 Net-RawIP-0.09d.ebuild 1534
 MD5 cb7a03950f80ca24532b4a5b4816193d Net-RawIP-0.1.ebuild 1551
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
+MD5 2a8ef089817a041d50c92f13f00a15ea Net-RawIP-0.2.ebuild 1549
 MD5 e04c3fa53d9d22a11b1deb98b8fca6f1 files/digest-Net-RawIP-0.09d 66
 MD5 ddbdc35d582bfa957c8346ece75890f5 files/digest-Net-RawIP-0.1 64
+MD5 1ff7bc542d0a1b4c0efcefc1d1d1358a files/digest-Net-RawIP-0.2 64
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.0 (GNU/Linux)
 
-iD8DBQFB+/0mmdTrptrqvGERAsfpAJ9W6i+0s722Tn9YmWrkqtO64mFtcwCeOdMV
-bz1kYqUzWd2/4jVKSoW0gR8=
-=70pt
+iD8DBQFCOFwDtG5z4I8BtQoRAiDRAJ4onJkWao3qhZvmFkiz7Lo2RjelQQCfY0AU
+l7RD/RcDFnka6hNIAYS17vU=
+=FfaI
 -----END PGP SIGNATURE-----
