@@ -1,11 +1,11 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-Glob/Text-Glob-0.06.ebuild,v 1.8 2004/12/22 11:49:05 nigoro Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-Glob/Text-Glob-0.06.ebuild,v 1.9 2005/03/16 16:12:29 mcummings Exp $
 
 inherit perl-module
 
 DESCRIPTION="Match globbing patterns against text"
-SRC_URI="http://www.cpan.org/modules/by-authors/id/R/RC/RCLAMP/${P}.tar.gz"
+SRC_URI="mirror://cpan/authors/id/R/RC/RCLAMP/${P}.tar.gz"
 HOMEPAGE="http://www.cpan.org/modules/by-authors/id/R/RC/RCLAMP/${P}.readme"
 
 SRC_TEST="do"
@@ -14,4 +14,4 @@ LICENSE="|| ( Artistic GPL-2 )"
 KEYWORDS="x86 amd64 alpha ~hppa ~ppc sparc ~mips ~ppc64"
 IUSE=""
 
-DEPEND="dev-perl/Test-Simple"
+DEPEND="dev-perl/module-build"
